Fix jumping bottom player bar

--- a/src/app/modules/layout/layout.component.scss
+++ b/src/app/modules/layout/layout.component.scss
@@ -16,7 +16,6 @@
 }
 
 .bottom-wrapper {
-  max-height: 136px;
   width: 100%;
   position: fixed;
   bottom: 0;
